--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
+    <div id="search">
+        <input type="text">
+    </div>
     <div id='map'></div>
 <script>
 // TO MAKE THE MAP APPEAR YOU MUST
